8016521: InetAddress should not always re-order addresses returned from name service

Reviewed-by: chegar